# cpp_example

./: .cproject  .project  CMakeLists.txt  copy1.cpp  ffmpeg.txt  url.txt
Unix_senior_programming/: README.md
array/: main.cpp
base64/: a.out  base64.cpp  base64_img.php  main.c  main.cpp
base64_img/: Base64.h  a.out  main.cpp
binary_system/: a.out  main.cpp
class/: a.out  main.cpp
config_parse/: CMakeLists.txt  config.conf
config_parse/inc/: parse_conf.h  qstring.h
config_parse/src/: aaa  main.cpp  parse_conf.cpp  qstring.cpp
cpp_language/: a.out  pointer_function.cpp
crc16/: a.out  main.c
daemon/: a.out  main.cpp  test_write_aaa.txt
environment_variable/: environ_func.c  test_environ.cpp
ffmpeg/: .cproject  FFMPEG.md
file_io/: a.out  readFielToVector.cpp
file_lockUp/: a.out  core  main.cpp
gdb/: a.out  main.c
genera_library/: README.md  a.cpp  mian.cpp
ipc/: .cproject
json_cpp/: .cproject  .project  a.cpp  a.out  getKey.cpp  main.cpp
linux_unix_programming_manual/: README.md
linux_unix_programming_manual/fileio/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  bad_exclusive_open.c  cmake_install.cmake  copy.c  fcntl_base.c  fileio  seek_io.c  test.txt  深入探究文件IO.md  通用IO.md
logger/: logger.cpp  logger.h
map/: map.cpp
math_operation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  math_operation  math_operation.cbp
mongoose-master/: .project
mongoose_http_message/: CMakeLists.txt  curl.cpp  curl_http_request.cpp  main.cpp
mongoose_http_message/logger/: logger.cpp  logger.h
mongoose_use/: a.out  main.cpp  mg_http_server.h.gch
msg_queue/: a.out  msgrecv.out  msgrev.c  msgsend.c  msgsend.out  process_singal_communication_test  sudo
my_muduo/: .cproject  .project
mysql/: main.cpp
ngx_trhead_pool/: .cproject  .project  ngx_thread_pool.c  ngx_thread_pool.h
opencv/: a.out  img_encode.cpp  img_test.cpp  main.cpp
operation/: a.out  main.cpp
php_extension/: .project
pointer/: abnormal.cpp  func_pointer.cpp  intelligence_pointer.cpp  smrtptrs.cpp
process/: a.out  create_process.cpp  exec.cpp  getpid.cpp  process.c  process_exec_test.cpp  signal.cpp  wait.cpp  wait_pid.cpp  wwqqqq
pthreadpool/: .project
queue/: queue.h
redisclient/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hiredis.cpp  redisclient  redisclient_main.cpp
share_memory/: .cproject  .project  share_memory.doc
socekt/: .cproject  .project  baseUdpServer.c  test.php
standard_library/: a.out  a.txt  bitset_type.cpp  string_type.cpp  vector_iterator.cpp  vector_type.cpp
system_command/: system_command.cpp
template/: main.cpp
test_hiredis/: a.out  aa.go  main.cpp
thread/: .cproject  pthread.md
thread_lock/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  thread_lock  (+1 more)
(+233 files in other folders)
